@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+common/readable.c: Fix 'messages' file parser to strip leading spaces but
+ not trailing spaces. Issue warning messages if messages are truncated.
+ Detect and report syntax errors rather than crash.
 common/readable.c: Fix incorrect random expression -- condition was always
  false.
 socket/image.c: Accelerate "replyinfo image_sums" processing.
